fixes #3 fix line breaks in showing notes

--- a/src/components/note/NoteShow/note-show.scss
+++ b/src/components/note/NoteShow/note-show.scss
@@ -28,6 +28,7 @@
   font-size: 1.2rem;
   line-height: 1.9em;
   overflow: auto;
+  white-space: pre-wrap;
 }
 
 .mangane {
